--- a/style.css
+++ b/style.css
@@ -147,9 +147,15 @@ html, body {
     }
     
     .logo-02 {
-        margin-bottom: 8vh;
+        margin-bottom: 4vh;
+        text-align: center;
     }
     
+    .logo-02 img {
+        max-width: 80%;
+        width: 100%;
+        height: auto;
+    }
     .countdown-container {
         gap: 10px;
         margin-bottom: 8vh;
